<resources>

    <!-- project parameters -->
    <string name="electric_data_file_name">electric_records.xml</string>

    <string name="app_name">AutoJob 2</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">設定</string>
    <string name="action_detail">所有資料</string>
    <string name="action_yes">是</string>
    <string name="action_no">否</string>
    <string name="action_confirm">確定</string>
    <string name="action_cancel">取消</string>

    <!-- drawer -->
    <string name="drawer_title">作者</string>
    <string name="drawer_subtitle">Main program: Josh Hsu (許朝翔)\nFGO script: Cliff Yu (余宗哲)</string>
    <string name="drawer_outline">AutoJob 2</string>
    <string name="drawer_gl20">GL20 測試</string>
    <string name="drawer_electricity">帳號管理</string>
    <string name="drawer_menu_social">社群</string>
    <string name="drawer_send">問題回報</string>
    <string name="drawer_share">分享給 </string>

    <!-- home activity -->
    <string name="bugreport_permission_request">需要外部儲存空間權限以便寄出錯誤報告</string>
    <string name="bugreport_permission_not_grant">您的資料無法寄給開發者因為您拒絕了外部儲存空間權限要求</string>
    <string name="bugreport_subject">問題回報</string>
    <string name="bugreport_send_out_via">選擇 APP 來寄出 ..</string>
    <string name="bugreport_context">簡單陳述您遇到的問題或是任何意見：\n</string>

    <!-- Electricity activity -->
    <string name="electric_edit">復原此帳號</string>
    <string name="electric_update">更新此帳號遊戲設定</string>
    <string name="electric_delete">刪除此帳號(尚未開放)</string>

    <string name="electric_add">給一個帳號名稱</string>
    <string name="electric_add_info">請輸入您現在的數值</string>
    <string name="electric_add_next">再新增一筆來比較</string>
    <string name="electric_add_field_holder">上個帳號名稱</string>
    <string name="electric_add_cancel">取消</string>

    <string name="electric_graphic_today">今天</string>
    <string name="electric_graphic_yesterday">昨天</string>
    <string name="electric_sheet_button_assistant">反向列出資料</string>

    <!-- Outline -->
    <string name="outline_title">JA 自動化腳本服務</string>
    <string name="outline_account_num">目前保存帳號數：</string>
    <string name="outline_list_all_scripts">列出所有腳本</string>
    <string name="outline_stop_auto_traverse">停止自動登入帳號</string>
    <string name="outline_current_progress">登入進度(按此停止): </string>
    <string name="outline_current_finish">已完成第 </string>
    <string name="outline_start_screen_capture">啟用抓點抓色</string>
    <string name="outline_start_service">啟動</string>
    <string name="outline_stop_service">停止</string>

    <!-- Settings -->
    <string name="settings_fragment_title_1">FGO 設定</string>
    <string name="settings_fragment_summary_1">在程式 FGO 底下的腳本設定</string>
    <string name="settings_fragment_title_2">腳本與系統設定</string>
    <string name="settings_fragment_summary_2">選擇執行任務與系統相關細項設定</string>
    <string name="settings_fragment_title_3">Shinobi 設定</string>
    <string name="settings_fragment_summary_3">在程式 Shinobi 底下的腳本設定</string>
    <string name="settings_fragment_title_4">RO 設定</string>
    <string name="settings_fragment_summary_4">在程式 RO 底下的腳本設定</string>
    <string name="settings_fragment_title_5">Epic 7 設定</string>
    <string name="settings_fragment_summary_5">在程式 Epic 7 底下的腳本設定</string>
    <string name="settings_fragment_title_6">最後的克勞迪亞設定</string>
    <string name="settings_fragment_summary_6">在程式最後的克勞迪亞底下的腳本設定</string>
    <string name="settings_restore_data_from_sdcard">開啟服務</string>
    <string name="settings_restore_title">恢復上次備份</string>
    <string name="settings_restore_subtitle">注意！您即將恢復上次備份資料，從上個備份至今你輸入的資料將會遺失。確定嗎？</string>
    <string name="settings_restore_failed">備份失敗</string>
    <string name="settings_restore_not_found">抱歉，在裝置上找不到任何備份資料。</string>
    <string name="settings_restore_finished">備份資料已成功復原。</string>
    <string name="settings_default_battle_arg">bc6|eg7|j8</string>
    <string name="settings_battle_arg_instruction">技能　　： abc, efg, ijk\n技能目標： 1, 2, 3\n寶具　　： 6, 7, 8\n御主技能： x, y, z\n換人技能： w 123|123\n回合區隔： #\n關卡區隔： |\n範例: a1b6|w13e7|xij38\n第一關: 技能a目標1, 技能b沒目標,\n               第一人寶具\n第二關: 把第一人換成後面第三人,\n               技能e無目標, 第二人寶具\n第三關: 御主技能1, 技能i無目標\n               技能j目標第3人, 第三人寶具</string>
    <string name="settings_battle_arg_create_summary">點此建立戰鬥所需的技能配置，可以依據不同回合設定，依據選卡策略選卡。</string>

    <!-- HeadService -->
    <string name="headservice_how_to_stop">服務已啟動，長按圖示可終止服務</string>
    <string name="headservice_stop_title">停止服務</string>
    <string name="headservice_stop_info">確定要停止服務嗎？</string>
    <string name="headservice_stop_button">停止</string>
    <string name="headservice_notification_title">自動腳本服務</string>
    <string name="headservice_notification_text">服務已經啟用，點擊停用服務。</string>

    <!-- Start up dialog -->
    <string name="startup_confirm">確定</string>
    <string name="startup_cancel">取消</string>
    <string name="startup_cancel_warn">警告</string>
    <string name="startup_cancel_exit">離開</string>
    <string name="startup_permit_system_alarm">請允許使用系統繪圖</string>
    <string name="startup_permit_system_alarm_failed">您未允許設定，程式將不會正常運作</string>

    <!-- Capture view -->
    <string name="capture_point_default_info">觸碰位置取得資訊</string>
    <string name="title_activity_battle_argument_dialog" translatable="false">BattleArgumentDialog</string>

    <!-- Battle Argument -->
    <string name="ba_name_prefix">戰鬥參數名稱</string>
    <string name="ba_royal_1">寶具1</string>
    <string name="ba_royal_2">寶具2</string>
    <string name="ba_royal_3">寶具3</string>
    <string name="ba_skill_1"> A </string>
    <string name="ba_skill_2"> B </string>
    <string name="ba_skill_3"> C </string>
    <string name="ba_skill_4"> E </string>
    <string name="ba_skill_5"> F </string>
    <string name="ba_skill_6"> G </string>
    <string name="ba_skill_7"> I </string>
    <string name="ba_skill_8"> J </string>
    <string name="ba_skill_9"> K </string>
    <string name="ba_target_0"> 無 </string>
    <string name="ba_target_1"> 1 </string>
    <string name="ba_target_2"> 2 </string>
    <string name="ba_target_3"> 3 </string>
    <string name="ba_target_4"> 4 </string>
    <string name="ba_target_5"> 5 </string>
    <string name="ba_target_6"> 6 </string>
    <string name="ba_master_1">御主1</string>
    <string name="ba_master_2">御主2</string>
    <string name="ba_master_3">御主3</string>
    <string name="ba_master_4">換人</string>
    <string name="ba_enemy_1">敵人1</string>
    <string name="ba_enemy_2">敵人2</string>
    <string name="ba_enemy_3">敵人3</string>
    <string name="ba_stage_1">關卡1</string>
    <string name="ba_stage_2">關卡2</string>
    <string name="ba_stage_3">關卡3</string>
    <string name="ba_round">#</string>
    <string name="ba_backspace">←</string>
    <string name="ba_instruction_all">請輸入技能或寶具</string>
    <string name="ba_instruction_target">請輸入目標，或略過</string>
    <string name="ba_instruction_target_A">請輸入前排目標</string>
    <string name="ba_instruction_target_B">請輸入後排目標</string>
    <string name="ba_arg_1">關卡1:</string>
    <string name="ba_arg_2">關卡2:</string>
    <string name="ba_arg_3">關卡3:</string>
    <string name="ba_confirm">確定</string>
    <string name="ba_cancel">取消</string>

    <!-- Activity and Service text -->
    <string name="broadcast_msg_action" translatable="false">Parcel_Broadcast_MSG</string>
    <string name="broadcast_msg_body_extra" translatable="false">Parcel_Broadcast_MSG_BODY</string>
    <string name="screen_capture_slot" translatable="false">SC_SLOT</string>
</resources>
