<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.mumu.android.joshautomation.activity.AppPreferenceActivity$SystemPrefFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/settings_fragment_title_2"
        android:summary="@string/settings_fragment_summary_2" />

    <header android:fragment="com.mumu.android.joshautomation.activity.AppPreferenceActivity$Epic7PrefFragment"
        android:icon="@drawable/epic7"
        android:title="@string/settings_fragment_title_5"
        android:summary="@string/settings_fragment_summary_5" />

    <header android:fragment="com.mumu.android.joshautomation.activity.AppPreferenceActivity$FGOPrefFragment"
        android:icon="@drawable/fgo"
        android:title="@string/settings_fragment_title_1"
        android:summary="@string/settings_fragment_summary_1" />

    <header android:fragment="com.mumu.android.joshautomation.activity.AppPreferenceActivity$ShinobiPrefFragment"
        android:icon="@mipmap/ic_fgo"
        android:title="@string/settings_fragment_title_3"
        android:summary="@string/settings_fragment_summary_3" />

    <header android:fragment="com.mumu.android.joshautomation.activity.AppPreferenceActivity$ROPrefFragment"
        android:icon="@mipmap/ic_fgo"
        android:title="@string/settings_fragment_title_4"
        android:summary="@string/settings_fragment_summary_4" />
</preference-headers>